# rusterizer

./: .gitattributes
docs/: index.md
rusterizer/: Cargo.toml
rusterizer/assets/: monkey.gltf
rusterizer/src/: main.rs  pbr_shader.rs  shared.rs  timer.rs
rusterizer/src/graphics/: graphics.rs  pipeline.rs  shader.rs  window.rs
rusterizer/src/resources/: image.rs  model.rs  resource_manager.rs  resources.rs
